fix(mobile-app section): aligned circle

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -142,6 +142,9 @@
     width: 110px;
     height: 110px;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .circle2-logo {
